# chat-rs

./: Cargo.toml  README.md  rust-toolchain.toml  todos.md
.cargo/: config.toml
.github/workflows/: cargo.yaml  format.yaml  rust.yaml  test.yaml
grpc_service/: Cargo.toml  build.rs
grpc_service/config/: local.yaml
grpc_service/example/: Cargo.toml
grpc_service/example/src/: main.rs
grpc_service/proto/: inference_service.proto
grpc_service/src/: client.rs  config.rs  configuration.rs  error.rs  lib.rs  main.rs  pg.rs  proto.rs  server.rs
grpc_service/tests/server/: helpers.rs  main.rs  server.rs
inference_core/: Cargo.toml
inference_core/src/: errors.rs  generate.rs  hf.rs  lib.rs  main.rs  modelpool.rs  tokenizer.rs
inference_core/src/models/: mod.rs  qwen.rs
migrations/: 20250418214150_create_models_table.sql  20250501185045_change_schema_for_sqlx.sql  20250503133122_add_download_status_to_models.sql  20250518135555_remove_model_type_col.sql
scripts/: postgres.sh  redis.sh
web_service/: Cargo.toml  chat.html
web_service/config/: local.yaml
web_service/src/: config.rs  errors.rs  lib.rs  main.rs  messages.rs  server.rs
web_service/src/routes/: chat.rs  mod.rs  models.rs
web_service/tests/: mod.rs  web_server.rs
web_service/tests/snapshots/: r#mod__web_server__health.snap
web_service/tests/web/: .web_server.rs.pending-snap  helpers.rs  web_server.rs
