[package]
name = "grpc_service"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
name="server"
path="./src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-stream = "0.3.6"
config = { version = "0.15.11", default-features = false, features=['yaml'] }
prost = { version = "0.13.5", default-features=false }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.0" }
tonic-reflection = "0.13.0"
tonic-health = "0.13.0"
tower-http = { version = "0.6.2", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features=false, features=["json", "env-filter", "tracing-log"] }
tracing-bunyan-formatter = "0.3.10"
uuid = { version = "1.16.0", features=["v4"] }
http = "1.3.1"
serde = { version = "1.0.219", features=["derive"] }

[build-dependencies]
tonic-build = "0.13.0"
