[package]
name = "inference_core"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "hf"

[[bin]]
path = "./src/bin/example.rs"
name = "generate"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
async-stream = "0.3.6"
candle-core = "0.9.1"
candle-transformers = { version = "0.9.1" }
futures = "0.3.31"
hf-hub = { version = "0.4.2", features = ["tokio"] }
tokenizers = "0.21.1"
tokio = { version = "1.42.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.17"
thiserror = "2.0.12"
serde_json = "1.0.140"

# [profile.release]
# opt-level = 3        # Or "3" for maximum speed
# lto = true             # Link Time Optimization
# codegen-units = 1      # Better optimizations
# target-cpu = "native"  # Enables AVX, F16C, etc.
