[package]
name = "web_service"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/bin/main.rs"
name = "web"

[dependencies]
config = { version = "0.15.11", default-features = false, features=['yaml'] }
tower-http = { version = "0.6.2", features=["trace"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["json", "std", "env-filter"] }
serde = { version = "1.0.219", features=["derive"] }
axum = { version = "0.8.3", features=["macros"] }
anyhow = "1.0.98"
tonic = "0.13.0"
thiserror = "2.0.12"
grpc_service = {path="../grpc_service/"}
futures = "0.3.31"
uuid = { version = "1.16.0", features=["v4"] }
http = "1.3.1"

[dev-dependencies]
insta = { version = "1.43.0", features = ["yaml"] } # autogenerate strings
tower = { version = "0.5.2", features=["util"] } # oneshot
http-body-util = "0.1.3"
tokio-stream = "0.1.17"
tokio = { version = "1.44.2", features = ["io-util"] }
hyper-util = "0.1.11"
bytes = { version = "1.10.1", features=["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
